# nu-lint

./: .envrc  .gitignore  .gitmodules  .woodpecker.pr.yaml  .woodpecker.yaml  CONTRIBUTING.md  Cargo.toml  README.md  REFACTORING.md  TODO_DEDUP.txt  VSCODE_IMPLEMENTATION.md  VSCODE_JSON_FORMAT.md  build.rs  cliff.toml  clippy.toml  conclusion.md  default.nix  flake.nix  package.nix  rust-toolchain.toml  rustfmt.toml  sgconfig.yml  test.nu
.ast-grep/: sgconfig.yml
.cargo/: config.toml
.github/: copilot-instructions.md
.github/workflows/: all_push.yml  pr.yml
.helix/: languages.toml
.woodpecker/: build.nu  changelog.nu  release.nu  release.yaml
benches/: lint_performance.rs  prefer_builtin_rules.rs  speed.rs
benches/fixtures/: medium_file.nu  with_violations.nu
examples/: debug_diagnostics.rs  reedline_diagnostics.rs
refactor/: alpha-rule-id.yml  concrete-description.yml  fix-uses-context.yml  link-in-description.yml  long-descriction.yaml  long-description.yml  no-replacement-fix-explanation.yml  plain-text-search.yml  short-description.yml  short-help.yml  short-rule-id.yml  short_id.yml  single-to-backtick.yml  vague-id.yml  vague-long-description.yml
refactor-tests/: long-description-test.yml
scripts/: build-darwin.nu  build.nu  changelog.nu  release.nu  test.nu  update_group_overview.nu
src/: alternatives.rs  ast.rs  ast_utils.rs  ast_walker.rs  case_conversion.rs  clean_log.rs  cli.rs  combined_visitor.rs  config.rs  context.rs  engine.rs  engine_state.rs  error.rs  external_command.rs  external_commands.rs  fix.rs  format.rs  format_conversions.rs  ignore.rs  inline_ignore.rs  lib.rs  lint.rs  lint_map.rs  lint_set.rs  log.rs  lsp.rs  main.rs  output.rs  parser.rs  reedline_adapter.rs  rule.rs  sets.rs  span.rs  test_utils.rs  violation.rs  visitor.rs
src/ast/: block.rs  builtin_command.rs  call.rs  command.rs  declaration.rs  effect.rs  expression.rs  ext_command.rs  mod.rs  pipeline.rs  regex.rs  span.rs  string.rs  syntax_shape.rs  tree.rs
src/dsl/: jq.rs  mod.rs
src/effect/: builtin.rs  external.rs  mod.rs
src/format/: compact.rs  mod.rs  pretty.rs
src/lsp/: actions.rs  completion.rs  diagnostic.rs  diagnostics.rs  docs.rs  document.rs  handlers.rs  line_index.rs  mod.rs  server.rs  state.rs
src/output/: json.rs  lsp.rs  mod.rs  text.rs  vscode.rs
src/rules/: groups.rs  mod.rs  prefer_try_for_simple_external_commands.rs  sets.rs
src/rules/add_hat_external_commands/: generated_fix.rs  ignore_good.rs  mod.rs
src/rules/always_annotate_ext_hat/: detect_bad.rs  mod.rs
src/rules/ansi_over_escape_codes/: detect_bad.rs  generated_fix.rs  ignore_good.rs  mod.rs
src/rules/append_to_concat_assign/: detect_bad.rs  generated_fix.rs  ignore_good.rs  mod.rs
src/rules/assign_then_return/: generated_fix.rs  mod.rs
src/rules/avoid_jq_for_simple_ops/: detect_bad.rs  generated_fix.rs  ignore_good.rs  mod.rs
src/rules/avoid_last_exit_code/: detect_bad.rs  mod.rs
src/rules/avoid_mutable_accumulation/: detect_bad.rs  ignore_good.rs  mod.rs
src/rules/avoid_nu_subprocess/: detect_bad.rs  ignore_good.rs  mod.rs
src/rules/avoid_self_import/: detect_bad.rs  ignore_good.rs  mod.rs
src/rules/bare_string_okay/: detect_bad.rs  generated_fix.rs  ignore_good.rs  mod.rs
src/rules/best_practices/: avoid_mutable_accumulation.rs  consistent_error_handling.rs  descriptive_error_messages.rs  external_command_helper.rs  max_positional_params.rs  max_positional_params_ast.rs  mod.rs  prefer_builtin_commands.rs  prefer_builtin_system_commands.rs  prefer_builtin_text_transforms.rs  prefer_each_over_for.rs  prefer_error_make.rs  prefer_match_over_if_chain.rs  prefer_parse_command.rs  prefer_range_iteration.rs  prefer_reduce_over_fold.rs  required_before_optional.rs
src/rules/brace_spacing/: detect_bad.rs  generated_fix.rs  ignore_good.rs  mod.rs
src/rules/builtin_not_empty/: detect_bad.rs  ignore_good.rs  mod.rs
src/rules/catch_builtin_error_try/: detect_bad.rs  ignore_good.rs  mod.rs
src/rules/chained_append/: detect_bad.rs  generated_fix.rs  ignore_good.rs  mod.rs
src/rules/chained_str_replace/: generated_fix.rs  mod.rs
src/rules/chained_str_transform/: detect_bad.rs  ignore_good.rs  mod.rs
src/rules/check_complete_exit_code/: detect_bad.rs  generated_fix.rs  ignore_good.rs  mod.rs
src/rules/check_typed_flag_before_use/: detect_bad.rs  ignore_good.rs  mod.rs
src/rules/closure_variable_capture/: detect_bad.rs  generated_fix.rs  ignore_good.rs  mod.rs
src/rules/collapsible_if/: detect_bad.rs  generated_fix.rs  ignore_good.rs  mod.rs
src/rules/columns_in_to_has/: detect_bad.rs  generated_fix.rs  mod.rs  (+1 more)
tests/: cli_tests.rs  config_integration.rs  config_linting.rs  config_loading.rs  config_tests.rs  detection.rs  engine.rs  file_collection.rs  integration_tests.rs  linting.rs  read_config_toml.rs  span.rs  test_utils.rs
tests/common/: mod.rs
tests/nu/: BP001.nu  BP002.nu  BP003.nu  BP004.nu  BP005.nu  BP007.nu  BP008.nu  BP009-AST.nu  BP009.nu  BP010.nu  BP011.nu  BP012.nu  BP013.nu  BP014.nu  D001.nu  D002.nu  P001.nu  P002.nu  P003.nu  S001.nu  S002.nu  S003.nu  S005.nu  S006.nu  S007.nu  S008.nu  S009.nu  S010.nu  S011.nu  S012.nu  S014.nu  S015.nu  T001.nu
(+1234 files in other folders)
