[package]
authors = ["Willem Vanhulle <willemvanhulle@protonmail.com>"]
description = "Linter for Nu shell scripts that helpfully suggests improvements"
edition = "2024"
exclude = ["benches/fixtures/"]
keywords = ["nushell", "linter", "static-analysis", "code-quality", "shell"]
license = "MIT"
name = "nu-lint"
repository = "https://github.com/wvhulle/nu-lint"
version = "0.0.20"


[lints.clippy]
complexity = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
style = { level = "deny", priority = -1 }

[dependencies]
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
heck = "0.5"
ignore = "0.4"
jaq-core = "2.2"
log = "0.4"
miette = { version = "7.0", features = ["fancy"] }
nu-cli = "0.108.0"
nu-cmd-lang = "0.108.0"
nu-command = "0.108.0"
nu-parser = "0.108.0"
nu-protocol = "0.108.0"
rayon = "1.10"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
toml = "0.8"

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports", "csv_output"] }
tempfile = "3.10"

[[bench]]
harness = false
name = "prefer_builtin_rules"
